replicate the scala compiler sttings from v2.x branch for travis build